// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders minos described by props 1`] = `
<div
  id="gameCanvas"
  style={
    Object {
      "gridTemplateColumns": "repeat(10, 1fr)",
      "gridTemplateRows": "repeat(20, 1fr)",
      "height": "60vh",
      "width": "30vh",
    }
  }
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    id="startGameMenu"
  >
    <button
      type="button"
    >
      START GAME
    </button>
    <button
      type="button"
    >
      SHOW LEADERBOARD
    </button>
  </div>
</div>
`;

exports[`correctly renders minos described by props 2`] = `
<div
  id="gameCanvas"
  style={
    Object {
      "gridTemplateColumns": "repeat(10, 1fr)",
      "gridTemplateRows": "repeat(20, 1fr)",
      "height": "60vh",
      "width": "30vh",
    }
  }
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    id="startGameMenu"
  >
    <h2>
      GAME OVER
    </h2>
    <button
      type="button"
    >
      PLAY AGAIN
    </button>
    <form>
      <h3>
        SUBMIT TO LEADERBOARD
      </h3>
      <label>
        NICKNAME:
        <input
          onChange={[Function]}
          value=""
        />
        <button
          disabled={true}
          onClick={[Function]}
        >
          SUBMIT
        </button>
      </label>
      <p>
        SAVING
      </p>
    </form>
    <button
      type="button"
    >
      SHOW LEADERBOARD
    </button>
  </div>
</div>
`;

exports[`correctly renders minos described by props 3`] = `
<div
  id="gameCanvas"
  style={
    Object {
      "gridTemplateColumns": "repeat(10, 1fr)",
      "gridTemplateRows": "repeat(20, 1fr)",
      "height": "60vh",
      "width": "30vh",
    }
  }
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
</div>
`;
